# ailets

./: .gitignore  CNAME  README.md
ailets-rs/: .gitignore  .swo  A229-latent-pipe-specification.md  Cargo.toml  Dockerfile  HANDOVER-a229-latent-pipes.md  Makefile  PLAN-pipepool-refactoring.md  README.md  a216-start-actor-on-demand.md  build.sh  clippy.toml  llms.txt  pipe-lifecycle-implementation-guide.md  run_actor.py  sample-use.py  test_dbg.dagsh  test_deb.dagsh  test_module.js
ailets-rs/actor_io/: Cargo.toml
ailets-rs/actor_io/doc/: llms.txt
ailets-rs/actor_io/src/: ailets_log.rs  areader.rs  awriter.rs  error_mapping.rs  lib.rs
ailets-rs/actor_io/tests/: areader_test.rs  awriter_test.rs
ailets-rs/actor_runtime/: Cargo.toml
ailets-rs/actor_runtime/doc/: llms.txt
ailets-rs/actor_runtime/src/: actor_runtime.rs  dagops.rs  ffi_runtime.rs  lib.rs  mocked_actor_runtime.rs  runtime_trait.rs  var_access.rs
ailets-rs/actor_runtime/tests/: mocked_actor_runtime_tests.rs  mocked_node_runtime.rs
ailets-rs/actor_runtime_mocked/: Cargo.toml
ailets-rs/actor_runtime_mocked/src/: lib.rs  rc_writer.rs  vfs.rs  vfs_writer.rs
ailets-rs/actor_runtime_mocked/tests/: vfs_test.rs
ailets-rs/ailetos/: A229-attach-hangs.md  CLAUDE.md  Cargo.toml  mempipe.py  notif_context.md  notification_queue_design.rs  pipepool_latent_resolution_handover.md  pipepool_race_conditions_handover.md  scheduler_iterator_handover.md  ticket.md  tla_experiment_handover.md  to-fix.md
ailets-rs/ailetos/doc/: branch-a248-actor-error.md
ailets-rs/ailetos/examples/: dag_demo.rs  stdin_dag_flow.rs
ailets-rs/ailetos/in_progress/: a267-hang-test.md
ailets-rs/ailetos/memory/: MEMORY.md  feedback_commit_permission.md  feedback_expect_messages.md  feedback_mutable_params.md  feedback_no_panic_production.md  feedback_no_timeouts_in_tests.md
ailets-rs/ailetos/spec/: EXPERIMENT_RESULTS.md  PipePool.cfg  PipePool.tla  README.md  run_tlc.sh
ailets-rs/ailetos/src/: attachments.rs  dag.rs  deb_control.rs  env_service.rs  environment.rs  errno.rs  executor.rs  fd_table.rs  idgen.rs  lib.rs  mempipe.rs  merge_reader.rs  notification_queue.rs  pipe.rs  pipepool.rs  scheduler.rs  stub_actor_runtime.rs  suspension.rs  system_runtime.rs  traversal.rs  var_store.rs
ailets-rs/ailetos/tests/: actor_syscall.rs  attachments.rs  blocking_actor_runtime.rs  dag.rs  environment.rs  executor.rs  io.rs  mempipe.rs  notification_queue.rs  on_demand_spawn.rs  pipe.rs  pipepool.rs  reader_to_actor.rs  scheduler.rs  storage.rs  stub_actor_runtime.rs  var_store.rs
ailets-rs/ailets-runtime/: Cargo.toml
ailets-rs/ailets-stdlib/: Cargo.toml
ailets-rs/ailets-stdlib/src/: lib.rs
ailets-rs/ailets-types/: Cargo.toml
ailets-rs/ailets-types/src/: lib.rs
ailets-rs/areader/: Cargo.toml
ailets-rs/areader/src/: areader.rs  lib.rs  mocked_actor_runtime.rs
ailets-rs/areader/tests/: areader_test.rs
ailets-rs/awriter/: Cargo.toml
ailets-rs/awriter/src/: awriter.rs  lib.rs
ailets-rs/awriter/tests/: awriter_test.rs
ailets-rs/cat/: Cargo.toml  run_cat.sh
ailets-rs/cat/src/: lib.rs  main.rs
ailets-rs/cli/: Cargo.toml  README.md  x1.tcl  x2.tcl
ailets-rs/cli/doc/: dag-shell-design.md
ailets-rs/cli/docs/: a273-cmdline-model.md  advice_to_refactor_dbg_actors.md  background_jobs_debugging.md  background_jobs_implementation.md  command-line.md  commands.md  concurrent_on_demand_start.md  dagsh.md  erlang_inspired.md
ailets-rs/cli/examples/: sample.dagsh  stdin_dag_flow.dagsh
ailets-rs/cli/scripts/: circular_min.dagsh  circular_min.tcl  concurrent_on_demand_start.dagsh  concurrent_on_demand_start.tcl  hello-llm.dagsh  hello_llm.dagsh  hello_llm.tcl  kill_actor.dagsh  kill_actor.tcl  partial_run.dagsh  partial_run.tcl  sample.tcl  shared_deps.dagsh  shared_deps.tcl  shared_with_children.dagsh  stdin_dag_flow.tcl  test_dbg.dagsh
ailets-rs/cli/src/: actor_registry.rs  ailetos_rt_glue.rs  commands.rs  dbg_actor.rs  dbg_control.rs  file_value_actor.rs  file_value_control.rs  flush_coordinator.rs  lib.rs  main.rs  model_aliases.rs  output.rs  prompt_nodes.rs  query_actor.rs  scheduler.rs  shell_input_actor.rs  shell_input_control.rs  shell_ui.rs  sqlitekv.rs  stdin_source.rs  tcl_interp.rs  to_doc_item_actor.rs  to_doc_item_control.rs  user_input.rs  val.rs
ailets-rs/cli/tests/: commands.rs  prompt_nodes.rs  shell.rs  shell_ui.rs
ailets-rs/dbg/: Cargo.toml
ailets-rs/dbg/src/: control.rs  lib.rs
ailets-rs/deb/: Cargo.toml
ailets-rs/deb/src/: control.rs  lib.rs
ailets-rs/doc/: a270-env-vars-from-kv.md  a272-llm-cmdline.md  cmdline-claude-code.md  cmdline-openai-codex.md  cmdline-pi-coding-agent.md  testing-actors.md
ailets-rs/doc/in_progress/: a203-simplest-llm-use.md  a267-followup-fixes.md  a267-hang-on-never-unblocked.md
ailets-rs/file_value/: Cargo.toml
ailets-rs/file_value/src/: actor_registry.rs  control.rs  lib.rs
ailets-rs/file_value/tests/: actor_test.rs
ailets-rs/gpt/: CLAUDE.md  Cargo.toml  plan.md  prompt.md
ailets-rs/gpt/src/: action_error.rs  areader.rs  awriter.rs  dagops.rs  fcw_chat.rs  fcw_dag.rs  fcw_fork.rs  fcw_tools.rs  fcw_trait.rs  funcall.rs  funcalls.rs  funcalls_builder.rs  funcalls_write.rs  handlers.rs  lib.rs  node_runtime.rs  rjiter.rs  scan_json.rs  sse_handler.rs  structure_builder.rs  sxslt.rs
ailets-rs/gpt/tests/: actor_test.rs  dagops_mock.rs  dagops_test.rs  fc_chat_test.rs  fcw_chat_test.rs  fcw_dag_test.rs  fcw_tools_test.rs  funcall_test.rs  funcalls_builder_test.rs  funcalls_test.rs  handlers_test.rs  mocked_node_runtime.rs  response_to_messages.rs  rjiter_test.rs  scan_json_test.rs  sse_handler_test.rs  streaming_assumptions_test.rs  structure_builder_test.rs
ailets-rs/messages_to_markdown/: Cargo.toml
ailets-rs/messages_to_markdown/src/: action_error.rs  areader.rs  awriter.rs  handlers.rs  lib.rs  main.rs  matchers.rs  node_runtime.rs  rjiter.rs  structure_builder.rs  writer.rs
ailets-rs/messages_to_query/: Cargo.toml
ailets-rs/python-bindings/: setup.py
ailets-rs/query/: Cargo.toml  DEVELOPMENT.md
ailets-rs/to_doc_item/: Cargo.toml
(+277 files in other folders)
