[package]
name = "actor_io"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
actor_runtime = { version = "0.3.0", path = "../actor_runtime" }
embedded-io = "0.6"

[dev-dependencies]
actor_runtime_mocked = { version = "0.2.0", path = "../actor_runtime_mocked" }
