[package]
name = "actor_io"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
actor_runtime.workspace = true
embedded-io.workspace = true
tracing = "0.1"

[dev-dependencies]
actor_runtime_mocked.workspace = true
