[package]
name = "actor_runtime"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
base64 = "0.22.1"
scan_json = { version = "1.2.0", path = "../../../streaming_json/scan_json" }
serde_json = "1.0.140"
