[package]
name = "ailetos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actor_io.workspace = true
actor_runtime.workspace = true
embedded-io.workspace = true
embedded-io-async = "0.7"
getrandom.workspace = true
tokio = { version = "1.41", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "io-util"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"

[[bin]]
name = "pipe_demo"
path = "bin/pipe_demo.rs"
