[package]
name = "cat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
actor_io = { version = "0.2.0", path = "../actor_io" }
actor_runtime = { version = "0.3.0", path = "../actor_runtime" }
embedded-io = "0.6"
getrandom = { version = "0.2", features = ["custom"] }
