[package]
name = "dagsh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dagsh"
path = "src/main.rs"

[dependencies]
ailetos = { path = "../ailetos" }
actor_io.workspace = true
actor_runtime.workspace = true
cat = { path = "../cat" }
embedded-io.workspace = true
once_cell = "1.19"
tokio = { version = "1.41", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
tracing = "0.1"
rustyline = "15"
