[package]
name = "dagsh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dagsh"
path = "src/lib.rs"

[[bin]]
name = "dagsh"
path = "src/main.rs"

[dependencies]
ailetos = { path = "../ailetos" }
actor_io = { workspace = true, features = ["std"] }
actor_runtime.workspace = true
cat = { path = "../cat" }
file_value = { path = "../file_value" }
gpt = { path = "../gpt" }
messages_to_markdown = { path = "../messages_to_markdown" }
messages_to_query = { path = "../messages_to_query" }
query = { path = "../query" }
to_doc_item = { path = "../to_doc_item" }
embedded-io.workspace = true
parking_lot.workspace = true
once_cell = "1.19"
tokio = { version = "1.41", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "io-util", "io-std", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "15"
futures = "0.3"
molt = "0.3.1"

