[package]
name = "file_value"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
actor_io = { workspace = true, features = ["std"] }
actor_runtime = { workspace = true, features = ["std"] }
embedded-io.workspace = true
uuid.workspace = true
