[package]
name = "gpt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
scan_json = "1.0.0"
actor_runtime = { version = "0.1.0", path = "../actor_runtime" }
areader = { version = "0.1.0", path = "../areader" }
actor_runtime_mocked = { version = "0.1.0", path = "../actor_runtime_mocked" }
