[package]
name = "gpt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
actor_runtime = { version = "0.2.0", path = "../actor_runtime", features = ["dagops"] }
actor_runtime_mocked = { version = "0.1.0", path = "../actor_runtime_mocked" }
actor_io = { version = "0.1.0", path = "../actor_io" }
serde_json = "1.0.139"
scan_json = "1.0.2"

[dev-dependencies]
hamcrest = "0.1.5"
