[package]
name = "gpt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
getrandom.workspace = true
actor_runtime.workspace = true
actor_runtime_mocked.workspace = true
actor_io.workspace = true
serde_json.workspace = true
scan_json.workspace = true
u8pool.workspace = true
embedded-io.workspace = true

[dev-dependencies]
hamcrest.workspace = true
