[package]
name = "messages_to_markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# To run tests, two types are needed
crate-type = ["cdylib", "lib"]
# crate-type = ["cdylib"]

[dependencies]
actor_io = { version = "0.2.0", path = "../actor_io" }
actor_runtime = { version = "0.3.0", path = "../actor_runtime" }
actor_runtime_mocked = { version = "0.2.0", path = "../actor_runtime_mocked" }
getrandom = { version = "0.2", features = ["custom"] }
scan_json = { version = "2.0.0", path = "../../../streaming_json/scan_json" }
u8pool = { version = "1.0.0", path = "../../../streaming_json/u8pool" }
embedded-io = "0.6"
