[package]
name = "messages_to_markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# To run tests, two types are needed
crate-type = ["cdylib", "lib"]
# crate-type = ["cdylib"]

[dependencies]
actor_io.workspace = true
actor_runtime.workspace = true
actor_runtime_mocked.workspace = true
getrandom.workspace = true
scan_json.workspace = true
u8pool.workspace = true
embedded-io.workspace = true
