[package]
name = "messages_to_query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# To run tests, two types are needed
crate-type = ["cdylib", "lib"]
# crate-type = ["lib"]

[dependencies]
actor_io.workspace = true
actor_runtime.workspace = true
actor_runtime_mocked.workspace = true
serde_json.workspace = true
getrandom.workspace = true
serde.workspace = true
base64.workspace = true
linked-hash-map.workspace = true
scan_json.workspace = true
u8pool.workspace = true
embedded-io.workspace = true

[dev-dependencies]
hamcrest.workspace = true
